# memory-alpha

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_settings.py  ensure_ollama.py  mcp_server.md  pyproject.toml  pytest.ini  run_tests.py  test_settings.py
src/memory_alpha/: __init__.py  __main__.py  debug_settings.py  embeddings.py  ensure_ollama.py  params.py  server.py  settings.py
tests/: check_services.py  conftest.py  test_integration.py  test_memory.py
